# tabby-framework-example

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  readme.md
assets/: imgui.ini  tbconfig
assets/scenes/: test_Map.blend  test_map.blend  test_map.blend1  test_map.glb  test_map.gltf
assets/shaders/mesh_shader/: fs.sc
assets/shaders/mesh_shader/essl/: fs.sc.bin.h  vs.sc.bin.h
assets/shaders/mesh_shader/spv/: fs.sc.bin.h  vs.sc.bin.h
assets/shaders/mesh_shader_embed/: essl.fs.sc.bin.h  essl.vs.sc.bin.h  spv.fs.sc.bin.h  spv.vs.sc.bin.h
assets/shaders/quad_shader/: fs.sc  varying.def.sc  vs.sc
assets/shaders/quad_shader/spv/: fs.sc.bin.h
assets/shaders/quad_shader_embed/: essl.fs.sc.bin.h  essl.vs.sc.bin.h  spv.fs.sc.bin.h  spv.vs.sc.bin.h
src/: Base.cpp  Base.h
src/app/: camera.cpp  camera.h
src/core/: base.cpp  base.h  defines.h  uuid.cpp  uuid.h
src/renderer/: image.cpp  image.h  renderer.cpp  renderer.h  shader_library.cpp  shader_library.h
